[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/towers.png" type="Texture" id=1]
[ext_resource path="res://scenes/character.gd" type="Script" id=2]
[ext_resource path="res://scenes/hurt_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/hit_box.tscn" type="PackedScene" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 1, 0.972549, 1, 0.0392157, 0.321569, 0.490196, 0.619608 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 128, 128 )

[node name="EnemyBase" type="Area2D"]
position = Vector2( 64, 400 )
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
direction = Vector2( 0, 0 )
move_speed = 0.0
attack_range = 0.0
attack_damage = 0.0
health_points = 120.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 32, -64 )
hframes = 2
frame = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprite"]
emitting = false
amount = 256
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, -1 )
initial_velocity = 100.0
angle = 10.0
angle_random = 1.0
scale_amount = 3.0
color = Color( 0, 1, 0.972549, 1 )
color_ramp = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 64
collision_mask = 0

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -21.0
margin_top = -36.0
margin_right = 19.0
margin_bottom = -22.0

[connection signal="area_entered" from="." to="." method="on_detection_area_entered"]
[connection signal="area_exited" from="." to="." method="on_detection_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="on_attack_cooldown"]
